# mcp-sports

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
src/mcp_sports_server/: __init__.py  main.py  server.py
src/nfl_mcp_server/: server.py  sportsclasses.py
