[project]
name = "mcp"
version = "1.2.0"
description = "Model Context Protocol SDK for Sports Stats"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Robert Oxley" }]
license = { text = "MIT" }

# Dependencies required for your project
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "argparse",
    "enum34",
    "logging",
    "pydantic",
    "starlette"
]

[project.optional-dependencies]
rich = ["rich>=13.9.4"]
cli = ["typer>=0.12.4", "python-dotenv>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start_server = "your_module_name:main"

[tool.uv]
resolution = "lowest-direct"
dev-dependencies = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "trio>=0.26.2",
    "pytest-flakefinder>=1.1.0",
    "pytest-xdist>=3.6.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/server/fastmcp/test_func_metadata.py" = ["E501"]

[tool.pyright]
include = ["src/mcp", "tests"]
venvPath = "."
venv = ".venv"
