[project]
name = "mcp-sports-server"
version = "1.0.3"
description = "Model Context Protocol SDK for real-time sports stats. Requires an API key from SportsRadar"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Robert Oxley" }]
maintainers = [{ name = "Robert Oxley", email = "robert@oxley.ca" }]
keywords = ["mcp", "llm", "automation", "sports", "stats"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "argparse",
    "pydantic",
    "starlette",
    "geopy",
    "fastmcp",
    "typing-extensions",  
]


[project.urls]
Repository = "https://github.com/reeeeemo/mcp-sports.git"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sports_server"]

[project.scripts]
mcp-sports-server = "mcp_sports_server:serve"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.391", "ruff>=0.8.5"]

[tool.hatch.metadata]
allow-direct-references = true